Atualização da documentação

--- a/simulation_api/templates/api_docs.html
+++ b/simulation_api/templates/api_docs.html
@@ -19,7 +19,7 @@
   <p>Base URL: <code>/api/</code></p>
   <div class="headers">
     <h3>Autenticação</h3>
-    <p>Todos os endpoints requerem no header a chave <code>X-API-KEY</code> igual ao valor configurado em <code>.env</code>:</p>
+    <p>Todos os endpoints requerem no header a chave <code>X-API-KEY</code> igual ao valor configurado em <code>.env:</code></p>
     <pre><code>X-API-KEY: sua_chave_aqui</code></pre>
   </div>
 
